--- a/index.qmd
+++ b/index.qmd
@@ -68,6 +68,7 @@ library(lwgeom)
 Le package `tidygeocoder` [@R-tidygeocoder] permet d'utiliser des services de géocodage en ligne. Par défaut, le package utilise [Nominatim](https://nominatim.org/) qui se base sur les données OSM.
 
 ```{r}
+loc <- "Mairie de Compiègne"
 pt <- data.frame(address = "28 Place de l'Hôtel de Ville, 60200 Compiègne")
 pt <- geocode(.tbl = pt, address = "address", quiet = TRUE) |>
   st_as_sf(coords = c("long", "lat"), crs = 4326)
@@ -96,7 +97,7 @@ pt_reproj <- st_transform(pt, crs = "EPSG:3857")
 
 mf_raster(tiles, expandBB = c(rep(-.2,4)))
 mf_map(pt_reproj, pch = 24, cex = 1.3, col = "darkblue", lwd = 2, add = TRUE)
-mf_annotation(pt_reproj, txt = "Mairie de Compiègne")
+mf_annotation(pt_reproj, txt = loc)
 mf_title("Tuiles OSM - Défaut")
 
 # Autre exemple de fournisseur
@@ -108,14 +109,14 @@ tiles <- get_tiles(x = emprise,
 
 mf_raster(tiles, expandBB = c(rep(-.2,4)))
 mf_map(pt_reproj, pch = 24, cex = 1.3, col = "darkblue", lwd = 2, add = TRUE)
-mf_annotation(pt_reproj, txt = "Mairie de Compiègne")
+mf_annotation(pt_reproj, txt = loc)
 mf_title("Tuiles OSM - OpenStreetmap.HOT")
 ```
 
 
 ## 3. Import de couches géographiques OSM
 
-Pour la cartographie, le package `maposm` (pas sur le CRAN). Il se base sur les fonctions du package `osmdata` [@R-osmdata] (partie suivante) pour télécharger les données OSM, au **format vectoriel**.
+Pour la cartographie, le package `maposm` (pas sur le CRAN) se base sur les fonctions du package `osmdata` [@R-osmdata] (partie suivante) pour télécharger les données OSM, au **format vectoriel**.
 
 La fonction principale, `om_get()`, permet de récupérer certaines couches géographiques utiles (routes, parcs, bâti, etc) autour d'un point, dans un rayon donné. Le résultat prend la forme d'une liste d'objets sf.
 
@@ -199,6 +200,22 @@ mapview(res$zone, alpha.regions = 0) + mapview(poi)
 ::: callout-note
 ### osmextract
 Le package `osmextract` [@R-osmextract] permet d’extraire des données directement depuis une base de données OSM, sans avoir à passer par une API. Le plus petit niveau géographique auquel il est possible de télécharger les données correspond en France aux anciennes régions. Pour travailler sur Compiègne, il nous faudrait d'abord télécharger l'ensemble des données OSM de la Picardie, disponibles [ici](https://download.geofabrik.de/europe/france/picardie.html), et pesant plus de 240 Mb.
+
+Le code ci-dessous effectue les mêmes manipulations que précédemment.
+
+```{r, eval = FALSE}
+library(osmextract)
+osm_pt <- oe_get(place = "Picardie",      
+                 layer = "points", 
+                 extra_tags = "amenity", 
+                 quiet = TRUE)
+
+# as.numeric(object.size(osm_pt) / 1000000) # 491 Mb
+osm_pt <- osm_pt[osm_pt$amenity %in% c("bar", "cafe", "restaurant"), ]
+osm_pt <- st_transform(osm_pt, crs = "EPSG:3857")
+osm_pt <- st_filter(osm_pt, res$zone, .predicates = st_intersects)
+```
+
 :::
 
 ## 5. Carroyage
@@ -207,7 +224,7 @@ Une fois les points d'intérêt récupérés, il est possible de les agréger da
 
 
 ```{r}
-#| fig-width: 8
+#| fig-width: 7
 #| fig-height: 7
 grid <- st_make_grid(res$zone, cellsize = 300, square = FALSE)
 grid <- st_intersection(grid, res$zone)
@@ -227,14 +244,13 @@ mf_title("Aménités gustatives - données carroyées")
 
 ## 6. Lissage (KDE)
 
-Le package `spatstat` [@R-spatstat] regroupe de nombreuses fonctions pour analyser des semis de points. Il utilise (génère ?) des objets de classe **ppp** *(planar point pattern)*, dans des fenêtres d'observation, de classe **owin** *(observation window)*.
+Le package `spatstat` [@R-spatstat] regroupe de nombreuses fonctions pour analyser des semis de points. Il génère des objets de classe **ppp** *(planar point pattern)*, dans des fenêtres d'observation, de classe **owin** *(observation window)*.
 
 La fonction `density.ppp()` calcule des valeurs à partir d'une estimation par noyau (KDE). Elle prend en entrée une portée (*sigma*), ainsi qu'une résolution au sein de laquelle sera calculée la densité, en pixels (*eps*).
 
 ```{r}
 #| fig-cap: "@moraga2023"
 #| echo: false
-
 knitr::include_graphics(rep('img/kde.png'))
 ```
 
@@ -250,7 +266,7 @@ Une fois les densités calculées, nous créons un objet de type *SpatRaster*. L
 
 ```{r, warning = FALSE}
 #| fig-width: 8
-#| fig-height: 7.5
+#| fig-height: 7
 
 # Calcul densité de restaurants par hectare
 r <- rast(ds) * 100 * 100
@@ -268,9 +284,9 @@ mf_map(res$street, col = "white", border = "white", lwd = .5, add = TRUE)
 mf_map(poi_reproj, pch = 20, cex = .2, col = "black", add = TRUE)
 mf_map(res$zone, col = NA, border = "#c6bab1", lwd = 4, add = TRUE)
 mf_title("La montagne alimentaire - Compiègne")
-#changer les couleurs
 ```
 
+> Couleurs ? 
 
 Il est possible de convertir cette couche en format vecteur. Par défaut, la fonction `as.polygons()` arrondit les valeurs des pixels à l'entier.
 
@@ -293,7 +309,7 @@ mf_map(res$railway, col = "grey50", lty = 2, lwd = .2, add = TRUE)
 mf_map(res$road, col = "white", border = "white", lwd = .5, add = TRUE)
 mf_map(res$street, col = "white", border = "white", lwd = .5, add = TRUE)
 mf_map(r_poly, var = "lyr.1", breaks = quantile(r_poly$lyr.1),
-       border = NA, lwd = .2, type = "choro", alpha = 0.6, pal = "Mint",
+       border = NA, lwd = .2, type = "choro", alpha = 0.6,
        leg_title = "Densité\n (n/ha)", add = TRUE)
 mf_map(poi_reproj, pch = 20, cex = .2, col = "black", add = TRUE)
 mf_map(res$zone, col = NA, border = "#c6bab1", lwd = 4, add = TRUE)
@@ -337,7 +353,8 @@ mf_map(res$railway, col = "grey50", lty = 2, lwd = .2, add = TRUE)
 mf_map(res$road, col = "white", border = "white", lwd = .5, add = TRUE)
 mf_map(res$street, col = "white", border = "white", lwd = .5, add = TRUE)
 mf_map(r[[1]], var = "lyr.1", breaks = bks, type = "choro", border = NA,
-       leg_title = "Densité\n (n/ha)", pal = pal,  add = TRUE)
+       leg_title = "Densité\n (n/ha)", leg_pos = "bottomleft", pal = pal, 
+       add = TRUE)
 mf_map(poi_reproj[poi_reproj$amenity == "bar-cafe" ,],
        pch = 20, cex = .2, col = "black", add = TRUE)
 mf_map(res$zone, col = NA, border = "#c6bab1", lwd = 4, add = TRUE)
@@ -350,7 +367,8 @@ mf_map(res$railway, col = "grey50", lty = 2, lwd = .2, add = TRUE)
 mf_map(res$road, col = "white", border = "white", lwd = .5, add = TRUE)
 mf_map(res$street, col = "white", border = "white", lwd = .5, add = TRUE)
 mf_map(r[[2]], var = "lyr.1", type = "choro", border = NA, breaks = bks,
-       leg_title = "Densité\n (n/ha)", pal = pal, add = TRUE)
+       leg_title = "Densité\n (n/ha)", pal = pal, leg_pos = "bottomleft",
+       add = TRUE)
 mf_map(poi_reproj[poi_reproj$amenity == "restaurant" ,],
        pch = 20, cex = .2, col = "black", add = TRUE)
 mf_map(res$zone, col = NA, border = "#c6bab1", lwd = 4, add = TRUE)
@@ -361,14 +379,18 @@ mf_title("Densité de restaurants")
 
 ## 7. Temps d'accès
 
-Le package `osrm` [@R-osrm] interface l'engin de routage [OSRM](https://project-osrm.org/) et propose différentes fonctions pour le calcul de temps de trajet et d'itinéraires. D'après la [documentation de l'API OSRM](https://project-osrm.org/docs/v5.24.0/api/#), **le nombre de requêtes est limité à 512 par connection à l'API, espacées d'au moins 5 secondes.**
+Le package `osrm` [@R-osrm] interface l'engin de routage [OSRM](https://project-osrm.org/) et propose différentes fonctions pour le calcul de temps de trajet et d'itinéraires. Ces calculs s'effectuent sur la base de **profils .lua** qui pour chaque mode de transport définissent des algorithmes permettant la sélection de telle ou telle route, une vitesse par défaut selon le type de route, etc. Le profil voiture est disponible [ici](https://github.com/Project-OSRM/osrm-backend/blob/master/profiles/car.lua).
 
+
+D'après la [documentation de l'API OSRM](https://project-osrm.org/docs/v5.24.0/api/#), le nombre de requêtes **sur le serveur de démo** est limité à **512** par connection à l'API, espacées d'au moins **5 secondes**.
 Pour des calculs plus volumineux (échelle nationale voire européenne), il est possible d'installer une instance OSRM sur son propre serveur (voir [ici](https://rcarto.github.io/posts/build_osrm_server/)).
 
 
 ### 7.1. Depuis la mairie
 
 Pour calculer les temps de trajet (en minutes) et les distances (en mètres) entre la mairie de Compiègne et l'ensemble des restaurants, bars et cafés situés dans un rayon de 2000m, nous utilisons la fonction `osrmTable()`, qui présente en sortie une liste composée de deux dataframes correspondant aux coordonnées des points d'origine et de destination, et d'un vecteur correspondant à la métrique calculée. **Il est possible de calculer les distances et temps de trajet entre plusieurs points en une seule requête.**
+
+Nous construisons d'abord une matrice O/D composées de coordonnées X/Y des points d'origine et de destination.
 
 
 ```{r}
@@ -379,9 +401,6 @@ row.names(o) <- 1:nrow(o)
 
 d <- data.frame(X = st_coordinates(poi)[, 1],
                 Y = st_coordinates(poi)[, 2])
-
-head(o)
-head(d)
 
 # 1 requête : 1 point d'origine, 92 points de destination
 mat_dist <- osrmTable(src = o,
@@ -403,6 +422,7 @@ apply(poi$dur, 2, summary)
 apply(poi$dist, 2, summary)
 ```
 
+> Jouer la requête ou la passer en eval = FALSE ?
 
 Il est possible d'atteindre `r nrow(d)/2` restaurants, cafés ou bars en moins de `r round(median(poi$dur),0)` min à pieds depuis la mairie de Compiègne, et les trois quarts se situent à moins de `r round(apply(poi$dist, 2, summary)[5],0)`m à pieds.
 
@@ -417,7 +437,7 @@ Afin de construire des indicateurs d'accessibilité, il est nécessaire de calcu
 
 Nous avons en tout 15498 couples origine / destination. Pour éviter de surcharger le serveur de démo, nous découpons nos requêtes en autant de destinations. Ainsi, chaque requête calculera le temps de trajet entre nos 189 points d'origine et un point de destination. 
 
-Les calculs ne seront pas présentés ici, et ont été effectués en local. Les résultats sont enregistrés dans le dossier data (fichier mat.rds).
+Le code pour effectuer les calculs est présenté ci-dessous, mais a été joués en local. Les résultats sont enregistrés dans le dossier data (fichier *matfoot.csv*, geopackage *mat.gpkg*).
 
 
 ::: callout-important
@@ -426,7 +446,7 @@ Pour que l'engin de routage calcule un itinéraire, les points d'origine et de d
 :::
 
 
-```{r, eval = FALSE}
+```{r}
 # Coordonnées des points d'origine : centroïdes des cellules de la grille
 o <- st_centroid(grid) |>
   st_transform(crs = 4326)
@@ -434,7 +454,10 @@ o <- st_centroid(grid) |>
 o$X <- st_coordinates(o)[, 1]
 o$Y <- st_coordinates(o)[, 2]
 o <- st_set_geometry(o[, c("X", "Y")], NULL)
+```
 
+
+```{r, eval = FALSE}
 # Les points de destination restent les mêmes
 matfoot <- list()
 
@@ -520,7 +543,7 @@ for(i in 1:nrow(d)){
 }
 
 routes <- do.call(rbind, routes)
-saveRDS(routes, "data/routes.rds")
+st_write(routes, "data/mat.gpkg", layer = "routes")
 ```
 
 
@@ -528,7 +551,7 @@ Le package `stplanr` [@R-stplanr] permet initialement de modéliser et de travai
 
 
 ```{r, warning = FALSE}
-routes <- readRDS("data/routes.rds")
+routes <- st_read("data/mat.gpkg", layer = "routes")
 routes <- st_transform(routes, crs = "EPSG:3857")
 routes$n <- 1
 routes$distance <- routes$distance * 1000
@@ -560,20 +583,17 @@ Le package osrm propose aussi des isochrones, à l'aide de la fonction `osrmIsoc
 
 
 ```{r, eval = FALSE}
-o <- data.frame(X = st_coordinates(pt)[, 1],
-                Y = st_coordinates(pt)[, 2])
-
 isos <- osrmIsochrone(loc = o,
                       breaks = seq(0,30,5),
                       res = 60,
                       osrm.profile = "foot")
 
-saveRDS(isos, "data/isos.rds")
+st_write(isos, "data/mat.gpkg", layer = "isos")
 ```
 
 
 ```{r, warning = FALSE}
-isos <- readRDS("data/isos.rds")
+isos <- st_read("data/mat.gpkg", layer = "isos")
 isos <- st_transform(isos, crs = "EPSG:3857")
 isos <- st_intersection(isos, res$zone)
 
@@ -601,14 +621,16 @@ trip <- osrmTrip(loc = pizz,
                  overview = "full",
                  osrm.profile = "foot")
 
-saveRDS(trip, "data/trip.rds")
+trip <- trip[[1]]$trip
+st_write(trip, "data/mat.gpkg", layer = "trip")
 ```
 
 
 ```{r}
-trip <- readRDS("data/trip.rds")
-trips <- trip[[1]]$trip |>
-  st_transform(crs = "EPSG:3857")
+#| fig-width: 7
+#| fig-height: 7
+trip <- st_read("data/mat.gpkg", layer = "trip")
+trips <- st_transform(trip, crs = "EPSG:3857")
 
 # Pour les labels : récupérer le début de la ligne
 start <- lwgeom::st_startpoint(trips)
@@ -619,13 +641,23 @@ start <- st_as_sf(start, coords = c("X", "Y"), crs = "EPSG:3857")
 pizz <- poi[!is.na(poi$cuisine) & poi$cuisine == "pizza" ,]|>
   st_transform(crs = "EPSG:3857")
 
-om_map(res, title = "La route de la pizza")
+mf_map(res$urban, col = "#a83c0a", border = "#e0dfdf", lwd = .5)
+mf_map(res$green, col = "#569128", border = "#569128", lwd = .5, add = TRUE)
+mf_map(res$water, col = "#aad3df", border = "#aad3df", lwd = .5, add = TRUE)
+mf_map(res$railway, col = "grey80", lty = 2, lwd = .2, add = TRUE)
+mf_map(res$road, col = "grey80", border = NA, lwd = .2, add = TRUE)
+mf_map(res$street, col = "grey80", border = NA, lwd = .2, add = TRUE)
 mf_map(res$zone, col = "#a83c0a33", alpha = .1, border = NA, add = TRUE)
 mf_map(res$zone, col = NA, border = "#d7b578", lwd = 15, add = TRUE) 
-mf_map(trips, col = "black", lwd = 2, add = TRUE)
-mf_map(start[start$id != 1, ], pch = 20, cex = 2, col = "#496d0e", add = TRUE)
+mf_map(trips, col = "black", lwd = 3, lty = 3, add = TRUE)
+mf_map(start[start$id != 1, ], pch = 20, cex = 2, col = "black", add = TRUE)
 mf_map(pt_reproj, pch = 24, cex = 1.3, col = "darkblue", lwd = 2, add = TRUE)
-mf_label(start, var = "id", cex = 1.1, overlap = TRUE, pos = 4, halo = TRUE)
+mf_label(start, var = "id", cex = 1.2, overlap = TRUE, pos = 4, col = "black", halo = TRUE)
+mf_title("La route de la pizza")
+mf_arrow()
+mf_scale(size = 500, scale_units = "m")
+mf_credits("OpenStreetMap contributors, 2025", pos = "bottomleft")
 ```
+
 
 
