--- a/index.qmd
+++ b/index.qmd
@@ -190,7 +190,7 @@ mf_map(pt_reproj, pch = 24, cex = 1.3, lwd = 2, col = "darkblue",
 ```
 
 
-Il est possible d'utiliser le package `mapview` [@R-mapview] pour afficher les attributs de nos points, de manière interactive.
+Il est possible d'utiliser le package `mapview` [@R-mapview] pour afficher les points ainsi que leurs attributs, de manière interactive.
 
 ```{r}
 mapview(res$zone, alpha.regions = 0) + mapview(poi)
@@ -210,7 +210,6 @@ osm_pt <- oe_get(place = "Picardie",
                  extra_tags = "amenity", 
                  quiet = TRUE)
 
-# as.numeric(object.size(osm_pt) / 1000000) # 491 Mb
 osm_pt <- osm_pt[osm_pt$amenity %in% c("bar", "cafe", "restaurant"), ]
 osm_pt <- st_transform(osm_pt, crs = "EPSG:3857")
 osm_pt <- st_filter(osm_pt, res$zone, .predicates = st_intersects)
@@ -388,7 +387,7 @@ Pour des calculs plus volumineux (échelle nationale voire européenne), il est 
 
 ### 7.1. Depuis la mairie
 
-Pour calculer les temps de trajet (en minutes) et les distances (en mètres) entre la mairie de Compiègne et l'ensemble des restaurants, bars et cafés situés dans un rayon de 2000m, nous utilisons la fonction `osrmTable()`, qui présente en sortie une liste composée de deux dataframes correspondant aux coordonnées des points d'origine et de destination, et d'un vecteur correspondant à la métrique calculée. **Il est possible de calculer les distances et temps de trajet entre plusieurs points en une seule requête.**
+Pour calculer les temps de trajet (en minutes) et les distances (en mètres) entre la mairie de Compiègne et l'ensemble des restaurants, bars et cafés situés dans un rayon de 2000m, nous utilisons la fonction `osrmTable()`, qui présente en sortie une liste composée de deux dataframes correspondant aux coordonnées des points d'origine et de destination, et d'un vecteur correspondant à la métrique calculée. **Il est possible de calculer les distances et temps de trajet entre plusieurs couples origine / destination en une seule requête.**
 
 Nous construisons d'abord une matrice O/D composées de coordonnées X/Y des points d'origine et de destination.
 
@@ -407,6 +406,7 @@ mat_dist <- osrmTable(src = o,
                       dst = d,
                       measure = "distance",
                       osrm.profile = 'foot')
+# Intervalle de 5 secondes entre les requêtes
 Sys.sleep(5)
 mat_dur <- osrmTable(src = o,
                      dst = d,
@@ -424,29 +424,34 @@ apply(poi$dist, 2, summary)
 
 > Jouer la requête ou la passer en eval = FALSE ?
 
-Il est possible d'atteindre `r nrow(d)/2` restaurants, cafés ou bars en moins de `r round(median(poi$dur),0)` min à pieds depuis la mairie de Compiègne, et les trois quarts se situent à moins de `r round(apply(poi$dist, 2, summary)[5],0)`m à pieds.
+> Montrer l'output de osrmTable() ?
+
+Il est possible d'atteindre `r nrow(d)/2` restaurants, cafés ou bars en moins de `r round(median(poi$dur),0)` min à pieds depuis la mairie de Compiègne, et les trois quarts se situent à moins de `r round(apply(poi$dist, 2, summary)[5],-1)`m à pieds.
 
 
 ### 7.2. Depuis la grille
+
+Afin de construire des indicateurs d'accessibilité, il est nécessaire de calculer les temps de trajet vers tous les restaurants / bars / cafés de la ville depuis chaque point de grille. 
 
 ```{r}
 nrow(grid) * nrow(d)
 ```
 
-Afin de construire des indicateurs d'accessibilité, il est nécessaire de calculer les temps de trajet vers tous les restaurants / bars / cafés de la ville depuis chaque point de grille. 
+Nous avons en tout `r nrow(grid) * nrow(d)` couples origine / destination. Pour éviter de surcharger le serveur de démo, nous découpons nos requêtes en autant de destinations. Ainsi, chaque requête calculera le temps de trajet entre nos 189 points d'origine et un point de destination. 
 
-Nous avons en tout 15498 couples origine / destination. Pour éviter de surcharger le serveur de démo, nous découpons nos requêtes en autant de destinations. Ainsi, chaque requête calculera le temps de trajet entre nos 189 points d'origine et un point de destination. 
-
-Le code pour effectuer les calculs est présenté ci-dessous, mais a été joués en local. Les résultats sont enregistrés dans le dossier data (fichier *matfoot.csv*, geopackage *mat.gpkg*).
+Le code pour effectuer les calculs est présenté ci-dessous, mais a été joués en local. Les résultats sont enregistrés dans le dossier *data*.
 
 
 ::: callout-important
 #### osrmNearest()
 Pour que l'engin de routage calcule un itinéraire, les points d'origine et de destination doivent être localisés sur une route. Si le point d'entrée ne se situe par sur une route, il sera déplacé sur le point le plus proche situé sur une route, en distance euclidienne. Cela peut avoir un impact sur l'itinéraire final ainsi que les temps de trajet, plus ou moins important selon le type d'espace (urbain ou rural).
+
+![](img/nearest.png)
+
 :::
 
 
-```{r}
+```{r, warning = FALSE}
 # Coordonnées des points d'origine : centroïdes des cellules de la grille
 o <- st_centroid(grid) |>
   st_transform(crs = 4326)
@@ -509,7 +514,7 @@ mf_map(poi_min_sf, var = "dur_foot", type = "choro", breaks = seq(0,15,3),
 ::: callout-important
 #### Valhalla
 
-C'est un autre engin de routage
+Valhalla est un engin de routage open source basé sur les données OSM, au même titre que OSRM. Il fonctionne sur un système de **tuiles** contenant différents niveaux de routes, ainsi que les graphes routiers associés (les tuiles de niveau 0 contiennent les autoroutes, celles de niveau 2 les routes départementales). Les routes sont calculées au moment de la requête (tandis qu'elles sont pré-calculées sur OSRM) via différents algorithmes (A* pour les plus courts chemins, *Contraction Hierarchies* pour les longues distances). Valhalla propose de nombreux profils (vélo de location, multimodalité, taxi), ainsi que la possibilité de prendre en compte les pentes.
 
 ![](img/valh.png)
 :::
@@ -533,6 +538,32 @@ om_map(res, title = "Restaurants à moins de 5 minutes")
 mf_map(grid, var = "n_resto", type = "choro", breaks = c(0,1,5,10,30,40),
        alpha = .6, border = NA, leg_title = "Nb de\nrestaurants",
        leg_val_rnd = 0, pal = "Reds", leg_pos = "topright", add = TRUE)
+```
+
+
+Le package osrm propose aussi des isochrones, à l'aide de la fonction `osrmIsochrone()`.
+
+
+```{r, eval = FALSE}
+isos <- osrmIsochrone(loc = o,
+                      breaks = seq(0,30,5),
+                      res = 60,
+                      osrm.profile = "foot")
+
+st_write(isos, "data/mat.gpkg", layer = "isos")
+```
+
+
+```{r, warning = FALSE}
+#| fig-width: 7
+#| fig-height: 7
+isos <- st_read("data/mat.gpkg", layer = "isos")
+isos <- st_transform(isos, crs = "EPSG:3857")
+isos <- st_intersection(isos, res$zone)
+
+om_map(res, title = "Isochrones autour de la mairie de Compiègne")
+mf_map(isos, type = "typo", var = "isomax", alpha = .6, pal = "Geyser",
+      border = "white", leg_pos = NA, add = TRUE)
 ```
 
 
@@ -564,9 +595,9 @@ Le package `stplanr` [@R-stplanr] permet initialement de modéliser et de travai
 
 
 ```{r, warning = FALSE}
-#| fig-width: 7
+#| fig-width: 8
 #| fig-height: 7
-routes <- st_read("data/mat.gpkg", layer = "routes")
+routes <- st_read("data/mat.gpkg", layer = "routes", quiet = TRUE)
 routes <- st_transform(routes, crs = "EPSG:3857")
 routes$n <- 1
 routes$distance <- routes$distance * 1000
@@ -591,30 +622,6 @@ for(i in nrow(routes):1){
 }
 leg(type = "cont", val = c(min(routes$distance), 1000, max(routes$distance)),
     pal = pal, pos = "left", title = "Distance (m)")
-```
-
-
-Le package osrm propose aussi des isochrones, à l'aide de la fonction `osrmIsochrone()`.
-
-
-```{r, eval = FALSE}
-isos <- osrmIsochrone(loc = o,
-                      breaks = seq(0,30,5),
-                      res = 60,
-                      osrm.profile = "foot")
-
-st_write(isos, "data/mat.gpkg", layer = "isos")
-```
-
-
-```{r, warning = FALSE}
-isos <- st_read("data/mat.gpkg", layer = "isos")
-isos <- st_transform(isos, crs = "EPSG:3857")
-isos <- st_intersection(isos, res$zone)
-
-om_map(res, title = "Isochrones autour de la mairie de Compiègne")
-mf_map(isos, type = "typo", var = "isomax", alpha = .6, pal = "Geyser",
-      border = "white", leg_pos = NA, add = TRUE)
 ```
 
 
@@ -644,7 +651,7 @@ st_write(trip, "data/mat.gpkg", layer = "trip")
 ```{r}
 #| fig-width: 7
 #| fig-height: 7
-trip <- st_read("data/mat.gpkg", layer = "trip")
+trip <- st_read("data/mat.gpkg", layer = "trip", quiet = TRUE)
 trips <- st_transform(trip, crs = "EPSG:3857")
 
 # Pour les labels : récupérer le début de la ligne
@@ -673,7 +680,8 @@ mf_title("La route de la pizza")
 mf_arrow()
 mf_scale(size = 500, scale_units = "m")
 mf_credits("OpenStreetMap contributors, 2025", pos = "bottomleft")
+
+sum(trip$duration)
 ```
 
-
-
+D'après les données OSM, à peine plus d'une heure suffisent pour faire la tournée des pizzas à Compiègne.
