--- a/index.qmd
+++ b/index.qmd
@@ -146,8 +146,8 @@ Pour la cartographie, le package `maposm` (pas sur le CRAN) se base sur les fonc
 La fonction principale, `om_get()`, permet de récupérer certaines couches géographiques utiles (routes, parcs, bâti, etc) autour d'un point, dans un rayon donné. Le résultat prend la forme d'une liste d'objets sf.
 
 ```{r}
-#| fig-width: 7
-#| fig-height: 7
+#| fig-width: 8
+#| fig-height: 8
 res <- om_get(x = c(st_coordinates(pt)[1],
                     st_coordinates(pt)[2]),
               r = 2000)
@@ -170,7 +170,7 @@ mf_credits("OpenStreetMap contributors, 2025", pos = "bottomleft")
 ```
 
 
-## 4. Export de tags avec osmdata
+## 4. Import de tags avec osmdata
 
 Le package `osmdata` permet d'extraire des données OSM à partir de l'API [Overpass](https://overpass-api.de/). Il nécessite dans un premier temps d'établir une *bounding box* au sein de laquelle seront extraites les données, puis de l'exécuter (fonction `add_osm_feature()`). Le résultat est une liste, qu'il faut ensuite convertir en objet sf.
 
@@ -203,8 +203,8 @@ poi_reproj  <- st_transform(poi , crs = "EPSG:3857")
 La fonction `om_map()` affiche les couches géographiques récupérées.
 
 ```{r}
-#| fig-width: 7
-#| fig-height: 7
+#| fig-width: 8
+#| fig-height: 8
 # Affichage
 om_map(res, title = "Autour de la gare")
 mf_map(poi_reproj, type = "typo", var = "amenity", cex = .7, pch = 15, 
@@ -247,8 +247,8 @@ Une fois les points d'intérêt récupérés, il est possible de les agréger da
 
 
 ```{r}
-#| fig-width: 7
-#| fig-height: 7
+#| fig-width: 8
+#| fig-height: 8
 # Création d'une grille régulière hexagonale de 300m de résolution
 grid <- st_make_grid(res$zone, cellsize = 300, square = FALSE)
 grid <- st_intersection(grid, res$zone)
@@ -308,7 +308,7 @@ mf_map(res$road, col = "white", border = "white", lwd = .5, add = TRUE)
 mf_map(res$street, col = "white", border = "white", lwd = .5, add = TRUE)
 mf_map(poi_reproj, pch = 20, cex = .2, col = "black", add = TRUE)
 mf_map(res$zone, col = NA, border = "#c6bab1", lwd = 4, add = TRUE)
-mf_title("La montagne alimentaire - Compiègne")
+mf_title("La montagne culinaire - Compiègne")
 ```
 
 
@@ -316,8 +316,8 @@ Il est possible de convertir cette couche en format vecteur. Par défaut, la fon
 
 
 ```{r}
-#| fig-width: 7
-#| fig-height: 7
+#| fig-width: 8
+#| fig-height: 8
 # par défaut
 r_poly <- as.polygons(r) |>
   st_as_sf()
@@ -342,9 +342,8 @@ mf_map(res$zone, col = NA, border = "#c6bab1", lwd = 4, add = TRUE)
 
 Par aménité, discrétisation commune
 
-```{r}
-#| fig-width: 7
-#| fig-height: 7
+
+```{r, echo = FALSE}
 # Cafés et bars ensemble
 poi_reproj$amenity[poi_reproj$amenity %in% c("bar", "cafe")] <- "bar-cafe"
 p <- list()
@@ -370,6 +369,7 @@ amp <- sort(c(unique(amp$lyr.1)))
 bks <- quantile(amp)
 pal <- mf_get_pal(n = length(bks) -1, palette = "Reds", alpha = .6, rev = TRUE)
 
+par(mfrow = c(1,2))
 mf_map(res$zone, col = "#f2efe9", border = NA)
 mf_map(res$water, col = "#aad3df", border = "#aad3df", lwd = .5,
        add = TRUE)
@@ -457,7 +457,7 @@ apply(poi$dist, 2, summary)
 ```
 
 
-Il est possible d'atteindre `r round(nrow(d)/2)` restaurants, cafés ou bars en moins de `r round(median(poi$dur),0)` min à pieds depuis la mairie de Compiègne, et les trois quarts se situent à moins de `r round(apply(poi$dist, 2, summary)[5],-1)`m à pieds.
+Il est possible d'atteindre `r round(nrow(d)/2, -1)` restaurants, cafés ou bars en moins de `r ceiling(median(poi$dur))` min à pieds depuis la gare de Compiègne, et les trois quarts se situent à moins de `r round(apply(poi$dist, 2, summary)[5],-1)`m à pieds.
 
 
 ### 7.2. Depuis la grille
@@ -520,9 +520,10 @@ Nous pouvons maintenant calculer plusieurs indicateurs d'accessibilité : temps 
 
 
 ```{r}
-#| fig-width: 7
-#| fig-height: 7
+#| fig-width: 8
+#| fig-height: 8
 mat <- read.csv("data/matfoot.csv")
+
 # Restaurant le plus proche pour chaque point de grille
 poi_min <- aggregate(dur_foot ~ ID_ORIG, mat, FUN = min, na.rm = TRUE)
 
@@ -534,7 +535,7 @@ poi_min <- do.call(rbind,
 # Cartographier
 poi_min_sf <- merge(grid, poi_min,
                     by.x = "ID", by.y = "ID_ORIG", all.x = TRUE)
-
+par(mfrow = c(1,1))
 om_map(res, title = "Temps d'accès au restaurant le plus proche")
 mf_map(poi_min_sf, var = "dur_foot", type = "choro", breaks = c(0,5,10,15,20,40),
        alpha = .6, border = NA, leg_title = "Temps\n(min.)",
@@ -552,9 +553,9 @@ Valhalla est un engin de routage open source basé sur les données OSM, au mêm
 
 
 ```{r}
-#| fig-width: 7
-#| fig-height: 7
-# Nombre de poi à moins de 5 minutes
+#| fig-width: 8
+#| fig-height: 8
+# moins de 5 minutes
 mat5 <- mat[mat$dur_foot < 5 ,]
 mat5$n <- 1
 mat5 <- aggregate(list(n_resto = mat5$n),
@@ -566,7 +567,7 @@ grid <- merge(grid[, "ID"], mat5,
 grid$n_resto[is.na(grid$n_resto)] <- 0
 
 om_map(res, title = "Restaurants à moins de 5 minutes")
-mf_map(grid, var = "n_resto", type = "choro", breaks = c(0,1,5,10,30,40),
+mf_map(grid, var = "n_resto", type = "choro", breaks = c(0,1,5,10,30,max(grid$n_resto)),
        alpha = .6, border = NA, leg_title = "Nombre de\nrestaurants",
        leg_val_rnd = 0, pal = "Reds", leg_pos = "topright", add = TRUE)
 ```
@@ -576,23 +577,23 @@ Le package osrm propose aussi des isochrones, à l'aide de la fonction `osrmIsoc
 
 
 ```{r, eval = FALSE}
-isos <- osrmIsochrone(loc = o,
-                      breaks = seq(0,30,5),
+isos <- osrmIsochrone(loc = pt,
+                      breaks = seq(0,45,5),
                       res = 60,
                       osrm.profile = "foot")
 
-st_write(isos, "data/mat.gpkg", layer = "isos")
+st_write(isos, "data/mat.gpkg", layer = "isos", delete_layer = TRUE)
 ```
 
 
 ```{r, warning = FALSE}
-#| fig-width: 7
-#| fig-height: 7
+#| fig-width: 8
+#| fig-height: 8
 isos <- st_read("data/mat.gpkg", layer = "isos", quiet = TRUE)
 isos <- st_transform(isos, crs = "EPSG:3857")
 isos <- st_intersection(isos, res$zone)
 
-om_map(res, title = "Isochrones autour de la mairie de Compiègne")
+om_map(res, title = "Isochrones autour de la gare de Compiègne")
 mf_map(isos, type = "typo", var = "isomax", alpha = .6, pal = "Geyser",
       border = "white", leg_pos = NA, add = TRUE)
 ```
@@ -618,7 +619,7 @@ for(i in 1:nrow(d)){
 }
 
 routes <- do.call(rbind, routes)
-st_write(routes, "data/mat.gpkg", layer = "routes")
+st_write(routes, "data/mat.gpkg", layer = "routes", delete_layer = TRUE)
 ```
 
 
@@ -626,8 +627,6 @@ Le package `stplanr` [@R-stplanr] permet initialement de modéliser et de travai
 
 
 ```{r, warning = FALSE}
-#| fig-width: 8
-#| fig-height: 7
 routes <- st_read("data/mat.gpkg", layer = "routes", quiet = TRUE)
 routes <- st_transform(routes, crs = "EPSG:3857")
 routes$n <- 1
@@ -647,18 +646,37 @@ for(i in 1:nrow(routes)){
 }
 
 pal <- mf_get_pal(nrow(l_seg[[1]]), rev = TRUE, palette = "Blues 3")
+pal2 <- paste0(pal, "70")
+
 om_map(res, title = "Routes", theme = "dark")
+
 for(i in nrow(routes):1){
   mf_map(l_seg[[i]], col = pal, lwd = 1.6, add = TRUE)
 }
+
 leg(type = "cont", val = c(min(routes$distance), 1000, max(routes$distance)),
     pal = pal, pos = "left", title = "Distance (m)")
+
+
+om_map(res, title = "Routes", theme = "dark")
+mf_map(seg, var = "n", type = "grad", col= "#00f5f5", leg_pos = NA, 
+       breaks = "fisher", nbreaks = 5, lwd = c(1,3,6,10,15), add = TRUE)
+mf_map(seg, var = "n", type = "grad", col= "#fff70c", breaks = "fisher", 
+       nbreaks = 5, lwd = c(.5,1.5,2.5,6,10), leg_val_rnd = 0,
+       leg_pos = "topright", leg_title = 'N. Routes', add = TRUE)
+
+om_map(res, title = "Routes", theme = "dark")
+mf_map(seg, var = "n", type = "grad", col= "#00f5f570", leg_pos = NA, 
+       breaks = "fisher", nbreaks = 5, lwd = c(2,5,9,14,18), add = TRUE)
+mf_map(seg, var = "n", type = "grad", col= "#00f5f5", breaks = "fisher", 
+       nbreaks = 5, lwd = c(1,3,7,11,13), leg_val_rnd = 0,
+       leg_pos = "topright", leg_title = 'N. Routes', add = TRUE)
 ```
 
 
 ## Bonus : la tournée des pizzeria
 
-Je me trouve à la mairie de Compiègne et souhaite goûter toutes les pizzas de la ville en un minimum de temps. Avec la fonction `osrmTrip()`, c'est possible !
+Je fais une escale d'une demie-heure à Compiègne et souhaite goûter toutes les pizzas de la ville en un minimum de temps depuis la gare. Avec la fonction `osrmTrip()`, c'est possible !
 
 Cette fonction répond au [problème du voyageur de commerce](https://fr.wikipedia.org/wiki/Probl%C3%A8me_du_voyageur_de_commerce), qui consiste à déterminer le plus court circuit passant par chaque point une seule fois.
 
@@ -666,7 +684,7 @@ Cette fonction répond au [problème du voyageur de commerce](https://fr.wikiped
 # Coordonnées des pizzeria
 pizz <- poi[!is.na(poi$cuisine) & poi$cuisine == "pizza" , "geometry"]
 
-# Ajouter le point de départ : la mairie
+# Ajouter le point de départ : la gare
 pizz <- rbind(pt[1, "geometry"], pizz)
 pizz$id <- 1:nrow(pizz)
 
@@ -675,13 +693,13 @@ trip <- osrmTrip(loc = pizz,
                  osrm.profile = "foot")
 
 trip <- trip[[1]]$trip
-st_write(trip, "data/mat.gpkg", layer = "trip")
+st_write(trip, "data/mat.gpkg", layer = "trip", delete_layer = TRUE)
 ```
 
 
 ```{r}
-#| fig-width: 7
-#| fig-height: 7
+#| fig-width: 8
+#| fig-height: 8
 trip <- st_read("data/mat.gpkg", layer = "trip", quiet = TRUE)
 trips <- st_transform(trip, crs = "EPSG:3857")
 
@@ -691,28 +709,15 @@ start <- do.call(rbind, start)
 start <- data.frame(id = rownames(trips), X = start[,1], Y = start[,2])
 start <- st_as_sf(start, coords = c("X", "Y"), crs = "EPSG:3857")
 
-pizz <- poi[!is.na(poi$cuisine) & poi$cuisine == "pizza" ,]|>
-  st_transform(crs = "EPSG:3857")
-
-mf_map(res$urban, col = "#a83c0a", border = "#e0dfdf", lwd = .5)
-mf_map(res$green, col = "#569128", border = "#569128", lwd = .5, add = TRUE)
-mf_map(res$water, col = "#aad3df", border = "#aad3df", lwd = .5, add = TRUE)
-mf_map(res$railway, col = "grey80", lty = 2, lwd = .2, add = TRUE)
-mf_map(res$building, col = "#942222", border = "#942222", lwd = .5, add= TRUE)
-mf_map(res$road, col = "grey80", border = NA, lwd = .2, add = TRUE)
-mf_map(res$street, col = "grey80", border = NA, lwd = .2, add = TRUE)
-mf_map(res$zone, col = "#a83c0a33", alpha = .1, border = NA, add = TRUE)
-mf_map(res$zone, col = NA, border = "#d7b578", lwd = 15, add = TRUE) 
+par(mfrow = c(1,1))
+om_map(res, theme = "pizza", title = "La route de la pizza")
 mf_map(trips, col = "black", lwd = 3, lty = 3, add = TRUE)
 mf_map(start[start$id != 1, ], pch = 20, cex = 2, col = "black", add = TRUE)
 mf_map(pt_reproj, pch = 24, cex = 1.3, col = "darkblue", lwd = 2, add = TRUE)
 mf_label(start, var = "id", cex = 1.2, overlap = TRUE, pos = 4, col = "black", halo = TRUE)
-mf_title("La route de la pizza")
-mf_arrow()
-mf_scale(size = 500, scale_units = "m")
-mf_credits("OpenStreetMap contributors, 2025", pos = "bottomleft")
 
 sum(trip$duration)
 ```
 
-D'après les données OSM, à peine plus d'une heure suffisent pour faire la tournée des pizzas à Compiègne.
+
+D'après les données OSM, moins de 25 minutes suffisent pour faire la tournée des pizzas à Compiègne. On est large !!
